--- a/index.html
+++ b/index.html
@@ -12,21 +12,49 @@
 </head>
 <body>
 <main>
-	<div class="container">	
-		<p class="title"><a href="/" class="tt">БХАГТИ-ВЕДАНТА</a></p>
-		<hr class="lh"/>
-		<p class="sub-title">ПРЕДСКАЗАНИЯ ОТ ВЕДАГОРА БХАГТИ-ВЕДАНТА ТРУНАЕВА</p>
-		<hr/>	
-		<div class="container">
-			ДРЕВО ЖИЗНИ ПИШЕТСЯ КАЖДЫЙ ДЕНЬ, А НА ЭТОМ САЙТЕ БУДУТ ЛУЧШЕ ПРЕДСКАЗАНИЯ ДЛЯ ВСЕГО СЛАВЯНСКОГО МИРА.
-		</div>
-		
+	<div class="container">
+		<div class="row">
+			<p class="title"><a href="/" class="tt">БХАГТИ-ВЕДАНТА</a></p>
+			<hr class="lh"/>
+			<p class="sub-title">ПРЕДСКАЗАНИЯ ОТ ВЕДАГОРА БХАГТИ-ВЕДАНТА ТРУНАЕВА</p>
+			<hr/>	
+			<div class="container">
+				<ul>
+					<li>
+						<div class="row"><div class="col-xl">
+						2025-10-24: Гадание от Далай-Ламы по сигаретным окуркам, по вопросу: «Когда появятся нормальный табак, и что будет с вредителями, портящими продукцию?».<br/>
+						<img src="i/2025/003.jpg" class="img"/>
+						Завтра в Сенат США поступит перехват переговоров террористов, и накажут высшей мерой наказания Аркадия Окулова, и Сашу Бельского. Оба попросят дать им вечный труд на зоне, что будет выполнено, если они будут сотрудничать в властями!
+						</div></div>
+					</li>
+					<li>
+						<div class="row"><div class="col-xl">
+						2025-10-24: Предсказание от Ламы по Носу относительно того, когда мне расскажут о «колпаке» (заговоре со шпионажем за мною).<br/>
+						<img src="i/2025/002.jpg" class="img"/>		
+						Завтра приедет несколько людей из США, но Русских, рожденных в СССР, и будут искать передатчика информаци: у них будет Жесткий Диск и Накопитель Памяти с доказательствами, но они не найдут поддержки, а потом на другой день они вбросят в Torrent стрим, как я покупают товары в магазине, с заголовком: «Мы сняли Дэлфа на камеру!». Через 9 дней мне скинет это видео Сергей Никоноров, перед отъездом в командировку, и поможет деньгами от пожертвований, что я пожил по-человечьи!
+						<br/>
+						</div></div>
+					</li>
+					<li>
+						<div class="row"><div class="col-xl">
+						2025-10-24: Предсказание от Ламы по лампе дневного света относительно Войны на Украине.<br/>
+						<img src="i/2025/001.jpg" class="img"/>
+						Завтра к 11:00 по приграничному времени война замерзнет, а войска отведут под Нижний Новгород. Южную границу России по Украине отодвинут на 300 
+						<br/>
+						</div></div>
+					</li>
+				</ul>
+			</div>
+		</div>	
+		<hr style="margin-top: 30px;"/>
 		<p align="center">
 			АВТОР САЙТА: <a href="https://trunaev.ru"/>ИВАН ТРУНАЕВ</a><br/>
 			<a href="javascript: (() => { function rus_to_latin ( str ) {var ru = {'а': 'a', 'б': 'b', 'в': 'v', 'г': 'g', 'д': 'd', 'е': 'e', 'ё': 'e', 'ж': 'j', 'з': 'z', 'и': 'i', 'й': 'i\'', 'к': 'k', 'л': 'l', 'м': 'm', 'н': 'n', 'о': 'o', 'п': 'p', 'р': 'r', 'с': 's', 'т': 't', 'у': 'u', 'ф': 'f', 'х': 'h', 'ц': 'c', 'ч': 'ch', 'ш': 'sh', 'щ': 'shch', 'ы': 'y', 'э': 'e', 'ю': 'u', 'я': 'ya'}, n_str = [];str = str.replace(/[ъь]+/g, '').replace(/й/g, 'i');for ( var i = 0; i < str.length; ++i ) {n_str.push(ru[ str[i] ]|| ru[ str[i].toLowerCase() ] == undefined && str[i]|| ru[ str[i].toLowerCase() ].toUpperCase());}return n_str.join('');} document.documentElement.innerHTML = rus_to_latin(document.documentElement.innerHTML); })();">ПЕРЕВЕСТИ НА ТРАНСЛИТО</a><br/>
 			<a href="https://bhagti-vedanta-ru.translate.goog/?_x_tr_sl=ru&_x_tr_tl=en&_x_tr_hl=ru&_x_tr_pto=wapp">ПЕРЕВЕСТИ НА АНГЛИЙСКИЙ СИЛАМИ ПЕРЕВОДЧИКА ОТ КОМПАНИИ ГУГЛЪ</a><br/>
 		</p>
 	</div>
+	
+
 </main>
 </body>
 </html>
